--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.1.0
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
+  flutter_riverpod: ^2.4.0
 
 dev_dependencies:
   flutter_test:
