--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   flutter_riverpod: ^2.4.0
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_test:
